FIX: Remove compile warnings.